k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: escrow-web-services
spec:
  selector:
    app: escrow-web-services
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
