k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: escrow-web-services
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: site.escrowcourier.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: escrow-web-services
                port:
                  number: 80
